# ecm2434-Group-Project

./: .gitignore  LICENSE  README.md
Documents/: Asset designs spec.md  Battle System root template.txt  Battle animation frontend.txt  Combat system.odt  HomePageSpecification.md  ItemsSpec.md  LoginBackEndSpecification.md  LoginFrontEndSpecification.md  Lore.odt  QRBackend.md  ReadMe.txt  ResourcesDatabaseSpec.md  Second meeting minutes.odt  TEMPLATE Backend.txt  TEMPLATE Frontend.txt  TheGameCharacter.md  advanced battle spec.txt  base_item_design.txt  battle_animation spec.md  meeting4.1.txt  meeting4_notes.txt  metting notes with nick week 9  ~$Lore.odt  ~$mbat system.odt  ~WRL0132.tmp  ~WRL3233.tmp
Documents/adding/: removing resources from users spec.md
TheGame/: config.json  first_run.py  manage.py
TheGame/Login/: asgi.py  forms.py  models.py  processes.py  settings.py  tests.py  urls.py  views.py  wsgi.py
TheGame/Login/migrations/: 0001_initial.py  0002_player_userid.py  0003_alter_player_password_alter_player_userid.py  0003_player_role_alter_player_password_and_more.py  0004_merge_20220227_1644.py  0005_player_lastresourcetimestamp.py  0006_alter_player_lastresourcetimestamp.py  0007_alter_player_lastresourcetimestamp.py
TheGame/Login/templates/Login/: index.html  loginPage.html  navbar.html  navbarTemplate.html  registerPage.html
TheGame/QRC/: QRC - Shortcut.lnk  models.py  settings.py  tests.py  urls.py  views.py
TheGame/QRC/migrations/: 0001_initial.py  0002_alter_qrc_qrid.py  0003_qrc_image.py  0004_alter_qrc_image.py
TheGame/QRC/static/QRC/: qr_wasm.js  qr_wasm_bg.wasm
TheGame/QRC/templates/QRC/: landing.html  manage.html  scanQR.html
TheGame/Resources/: admin.py  models.py  processes.py  tests.py
TheGame/Resources/migrations/: 0001_initial.py  0002_playerresource_amount.py  0003_alter_resource_name.py
TheGame/TheGame/: GameState.py  action.py  admin.py  battle.py  combat_root.py  dbtests.py  forms.py  itemModels.py  models.py  processes.py  settings.py  tests.py  unit.py  urls.py  views.py
TheGame/TheGame/migrations/: 0001_initial.py  0002_alter_item_price.py  0002_remove_champion_aevasion_remove_champion_ahealth_and_more.py  0002_rename_players_player.py  0003_alter_champion_armour_alter_champion_auxitem1_and_more.py  0003_championitems_amount_championitems_itemlevel_and_more.py  0003_delete_player.py  0004_baseweapon_ap_cost.py  0004_initial.py  0004_remove_championitems_amount.py  0005_remove_championitems_itemlevel_and_more.py  0005_rename_player_pstats.py  0006_rename_price_item_price1_item_price2_item_price3_and_more.py  0006_rename_pstats_pstat.py  0007_baseitem_shieldvalue.py  0007_pstat_username.py  0008_champion_sprite_item_sprite.py  0008_remove_pstat_username_pstat_player.py  0009_alter_item_sprite.py  0009_alter_pstat_accuracy_alter_pstat_attackspeed_and_more.py  0010_alter_champion_primaryweapon.py  0010_champion_delete_pstat.py  0011_alter_champion_primaryweapon.py  0011_item_championitems.py  0012_item_stat2_item_stat3.py  0013_weapon_rename_stat1_item_armourvalue_and_more.py  0014_titem_baseitem_baseweapon_tchampionitems_and_more.py
TheGame/TheGame/templates/TheGame/: CharacterInventory.html  CharacterMenu.html  (+23 more)
TheGame/qr-wasm/: Cargo.toml  README.md  index.html
TheGame/qr-wasm/src/: lib.rs
Trello screenshots/: readme.md
(+11 files in other folders)
